Fix layout bug on itemlist card

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.css
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.css
@@ -356,32 +356,43 @@ html.flexbox .CardsLandscape {
 html.flexbox .CardsLandscape .CardColumn {
   display: flex;
 }
-html.flexbox .CardsLandscape .Card {
+html.flexbox .CardsLandscape .Card:not(.ItemList) {
   display: flex;
   width: 100%;
 }
-html.flexbox .CardsLandscape .ImageContainer {
+html.flexbox .CardsLandscape .Card:not(.ItemList) .ImageContainer {
   flex: 0 0 100px;
   flex-grow: 0%;
   flex-shrink: 0%;
   flex-basis: 100px;
   align-self: flex-start;
 }
-html.flexbox .CardsLandscape .ContentContainer {
+html.flexbox .CardsLandscape .Card:not(.ItemList) .ContentContainer {
   margin-left: 0 !important;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex: auto;
 }
-html.flexbox .CardsLandscape .CardContent {
+html.flexbox .CardsLandscape .Card:not(.ItemList) .CardContent {
   margin-left: 0;
   height: auto;
   max-height: 243px;
   border-bottom: none !important;
 }
-html.flexbox .CardsLandscape .BottomBar {
+html.flexbox .CardsLandscape .Card:not(.ItemList) .BottomBar {
   border-top: 1px solid #dfdfdf;
   margin-left: 0 !important;
   margin-right: 15px !important;
+}
+.Card.ItemList {
+  display: block;
+}
+.Card.ItemList .BottomBar {
+  border: none;
+  margin-right: 0;
+  margin-left: 0;
+}
+.Card.ItemList .BottomBar .dropdown {
+  margin-left: 5px;
 }
